--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -363,11 +363,11 @@
                           </div>
                           <div *ngIf="_toolSettings.SECTIONS.SETTINGS.TICKET.onoff" class="tab-panel-group">
                               <div class="tab-group-content">
-                                   <button [routerLink]="['insertTicketSettings']" class="fluent-big-button">
+                                   <button [routerLink]="['Settings/Ticket']" class="fluent-big-button">
                                           <img src="assets/gear_settings.png" alt="New User">
                                           <span class="label">Insert</span>
                                    </button>
-                                   <button [routerLink]="['updateTicketSettingsList']" class="fluent-big-button">
+                                   <button [routerLink]="['Settings/updateTicket']" class="fluent-big-button">
                                           <img src="assets/gear_settings.png" alt="Edit User">
                                           <span class="label">Update</span>
                                     </button>
