made drastic changes to the map component

--- a/src/app/basemap/basemap.component.html
+++ b/src/app/basemap/basemap.component.html
@@ -2,6 +2,7 @@
   <button class="button rounded dropdown-toggle">Basemaps</button>
   <ul class="split-content d-menu place-right" style="min-width: 0;" data-role="dropdown">
       <li><a (click)="changeBase(mapflex)">Original</a></li>
+      <li><a (click)="changeBase(vsub)">Vector Sub</a></li>
       <li><a (click)="changeBase(wms)">Aerial</a></li>
       <li><a (click)="changeBase(google)">Google</a></li>
   </ul>
