--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -316,6 +316,10 @@
                                     <img src="assets/identify-tool.png" alt="M">
                                     <span class="label">Identify</span>
                                 </button>
+                                <button  (click)="actionSendToolBar(app.toolbarActivies.EDIT_RANGES)"  class="fluent-big-button">
+                                    <img src="assets/edit_ranges.png" alt="M">
+                                    <span class="label">Ranges</span>
+                                </button>
                              </div>
                              <div class="tab-group-caption">Tools</div>
                           </div>
