--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -353,11 +353,11 @@
   
                           <div *ngIf="_toolSettings.SECTIONS.SETTINGS.USER.onoff" class="tab-panel-group">
                               <div class="tab-group-content">
-                                   <button [routerLink]="['newUser']" class="fluent-big-button">
+                                   <button [routerLink]="['Settings/createUser']" class="fluent-big-button">
                                           <img src="assets/user_new.png" alt="New User">
                                           <span class="label">Insert</span>
                                    </button>
-                                   <button [routerLink]="['updateUser']" class="fluent-big-button">
+                                   <button [routerLink]="['Settings/updateUsers']" class="fluent-big-button">
                                           <img src="assets/user_edit.png" alt="Edit User">
                                           <span class="label">Update</span>
                                     </button>
