--- a/src/app/settings/user-u/user-u.component.html
+++ b/src/app/settings/user-u/user-u.component.html
@@ -14,9 +14,9 @@
   </div>
 </div>
 <div #displayBadge style="background: white;display: none; width:100%; height:100%;">
-<canvas-editing [icon]="selected_user" ></canvas-editing>
+<!-- <canvas-editing [icon]="selected_user" ></canvas-editing> -->
 </div>
-<insert-user *ngIf="editOnOff" [enbPass]="false" [attributes]="selected_user" [btnTitle]="'Update'" [btnOnOff]="true" (closeEditForm)="_closeEdit()" ></insert-user>
+<!-- <insert-user *ngIf="editOnOff" [enbPass]="false" [attributes]="selected_user" [btnTitle]="'Update'" [btnOnOff]="true" (closeEditForm)="_closeEdit()" ></insert-user> -->
 <div #wndUsers class="window">
  <div class="window-caption">
         <span class="window-caption-icon"><span class="mif-windows"></span></span>
