save changes to cloud

--- a/src/app/subdivision/worksheet/attach-page/attach-page.component.html
+++ b/src/app/subdivision/worksheet/attach-page/attach-page.component.html
@@ -11,6 +11,7 @@
           <br>
           <button class="button info" (click)="onRotate(pic)"><i class="fa fa-retweet"></i></button>
           <button class="button info" (click)="changeGeo(pic)"><i class="fa fa-globe"></i></button>
+          <button class="button info" (click)="onEdit(pic)"><i class="fa fa-edit"></i></button>
           <button class="button danger"(click)="removeItem(pic)"><i class="fa fa-trash"></i></button>
         </div>
       </div>
