--- a/src/app/subdivision/worksheet/preview/preview.component.css
+++ b/src/app/subdivision/worksheet/preview/preview.component.css
@@ -22,6 +22,15 @@
 	display: block;
 }
 
+.close {
+    position: absolute;color: #0ce3ac; 
+    right:10px; top: 4px;font-size:50px; z-index: 20;
+}
+
+.close:hover {
+    color: black;
+}
+
 .img-thumbnail {
     padding: .25rem;
     background-color: #fff;
