--- a/src/app/subdivision/worksheet/editing/tools/tools.component.html
+++ b/src/app/subdivision/worksheet/editing/tools/tools.component.html
@@ -1,16 +1,22 @@
-<div mwlDraggable 
-  style="position: absolute;background: #eee;  height: 40px;">
-  <div class="toolbar">
-    <div mwlDraggable class="toolbar-section">
-        <button class="toolbar-button">...</button>
-        ...
-        <button class="toolbar-button">...</button>
+<div draggable="true" [ngStyle]="{'left': xf, 'top' : yf}" 
+(dragstart)="onDragStart($event)" 
+(dragend)="onDragEnd($event)" (drag)="onDrag($event)" 
+  style="position: absolute;background: rgba(48,48,48, 0.9);z-index:1;  height: 44px;">
+  <div  ngDraggable class="toolbar">
+    <div  class="toolbar-section">
+        <button class="toolbar-button">
+            <i class="fa fa-search-plus" aria-hidden="true"></i>
+        </button>
+
+        <button class="toolbar-button">
+            <i class="fa fa-search-minus" aria-hidden="true"></i>
+        </button>
     </div>
-    ...
+
     <div class="toolbar-section">
-        <button class="toolbar-button">...</button>
-        ...
-        <button class="toolbar-button">...</button>
+        <button class="toolbar-button"><i class="fa fa-text-width" aria-hidden="true"></i></button>
+        <button class="toolbar-button"><i class="fa fa-list" aria-hidden="true"></i></button>
+        <button class="toolbar-button"><i class="fa fa-square" aria-hidden="true"></i></button>
     </div>
 </div>
 
