jackie made changes

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -18,3 +18,10 @@
     -webkit-transform: scale(.8);
     transform: scale(.8);
 }
+
+.favorite {
+    color: rgb(99, 4, 102);
+    border-radius: 20%;
+    font-size: 20px;
+    background: green;
+}
