--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,11 @@
 <div class="bgbody">
   <div *ngIf="display" class="login-form padding20 block-shadow" style="opacity: 1; transform: scale(1); transition: 0.5s;">
-      
+        
      
           <div style="position: absolute;top: 1.8px; z-index: 1000">
-            <img src="assets/public_safety_logo.png" width="80" height="80" alt="">
+            <img src="assets/avatar.png" width="80" height="80" alt="">
           </div>
-          <h1 style="margin-left:90px;" class="text-light">SpartanPro V3.0</h1>
+          <h1 style="margin-left:90px;" class="text-light">SpartanPro V4.0</h1>
           <hr class="thin">
           <br>
           <div class="input-control text full-size" data-role="input">
