--- a/src/app/settings/user-u/user-u.component.html
+++ b/src/app/settings/user-u/user-u.component.html
@@ -16,7 +16,7 @@
 <div #displayBadge style="background: white;display: none; width:100%; height:100%;">
 <!-- <canvas-editing [icon]="selected_user" ></canvas-editing> -->
 </div>
-<!-- <insert-user *ngIf="editOnOff" [enbPass]="false" [attributes]="selected_user" [btnTitle]="'Update'" [btnOnOff]="true" (closeEditForm)="_closeEdit()" ></insert-user> -->
+<app-user-i *ngIf="editOnOff" [enbPass]="false" [attributes]="selected_user" [btnTitle]="'Update'" [btnOnOff]="true" (closeEditForm)="_closeEdit()" ></app-user-i>
 <div #wndUsers class="window">
  <div class="window-caption">
         <span class="window-caption-icon"><span class="mif-windows"></span></span>
